Update posts, move title on top of the cover image

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,7 +8,7 @@
   "Apparently there are no posts at the moment, check again later.": "Apparemment il n'y a pas d'article pour le moment, vérifiez plus tard.",
   "Back to home": "Retour à l'accueil",
   "Email cannot be blank.": "L'email ne peut pas être vide.",
-  "Featured": "Mis en avant",
+  "Featured": "À la mode",
   "Get the latest posts delivered right to your inbox.": "Recevez les derniers articles directement dans votre boîte mail.",
   "Go to the home page": "Aller à la page d'accueil",
   "Great! Next, complete checkout for full access.": "Super ! Effectuez le paiement pour obtenir l'accès complet.",
@@ -26,7 +26,7 @@
   "Please enter a valid email address": "Veuillez entrer une adresse email valide",
   "Posted by": "Publié par",
   "Published with": "Publié avec",
-  "Recent articles": "Articles récents",
+  "Recent articles": "Nos articles écrits avec ❤️",
   "Recommended for you": "Recommandé pour vous",
   "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox.": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte mail.",
   "Subscribe": "S'abonner",
@@ -34,7 +34,7 @@
   "Subscribe to our newsletter": "S'abonner à notre newsletter",
   "Subscribed!": "Inscrit !",
   "Success! Your account is fully activated, you now have access to all content.": "Parfait ! Votre compte est entièrement activé, vous avez désormais accès à tout le contenu.",
-  "Tags": "Mots clés",
+  "Tags": "À la carte 🧐",
   "Toggle dark mode": "Basculer en mode sombre",
   "Type to search": "Écrivez pour rechercher",
   "Unfortunately the page you were looking for could not be found.": "Malheureusement la page que vous cherchez n'a pas pu être trouvée.",
