--- a/locales/fr.json
+++ b/locales/fr.json
@@ -27,7 +27,7 @@
   "Posted by": "Publié par",
   "Published with": "Publié avec",
   "Recent articles": "Nos articles écrits avec ❤️",
-  "Recommended for you": "Recommandé pour vous",
+  "Recommended for you": "Juste pour vous",
   "Stay up to date! Get all the latest & greatest posts delivered straight to your inbox.": "Restez à jour ! Recevez tous les derniers articles directement dans votre boîte mail.",
   "Subscribe": "S'abonner",
   "Subscribe to": "S'abonner à",
