Update authors, tags : remove pagination

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -8,7 +8,7 @@
   "Apparently there are no posts at the moment, check again later.": "Apparemment il n'y a pas d'article pour le moment, vérifiez plus tard.",
   "Back to home": "Retour à l'accueil",
   "Email cannot be blank.": "L'email ne peut pas être vide.",
-  "Featured": "À la mode",
+  "Featured": "À la une",
   "Get the latest posts delivered right to your inbox.": "Recevez les derniers articles directement dans votre boîte mail.",
   "Go to the home page": "Aller à la page d'accueil",
   "Great! Next, complete checkout for full access.": "Super ! Effectuez le paiement pour obtenir l'accès complet.",
